force-app/main/default/objects/CF_Evaluation_Result__c/CF_Evaluation_Result__c.object-meta.xml
<CustomObject>
    <label>Evaluation Result</label>
    <nameField>
        <displayFormat>ERN-{00000000}</displayFormat>
        <label>Evaluation Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>