force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>CF_Agent_Id__c</fullName>
    <formula>CF_Call_Evaluation__r.CF_Agent__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Id</label>
    <type>Text</type>
</CustomField>