force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Applicability_Reason__c.field-meta.xml
<CustomField>
    <fullName>CF_Applicability_Reason__c</fullName>
    <description>Brief explanation of why the criterion was marked not applicable, or notes on applicability determination.</description>
    <label>Applicability Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>