force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Applicable__c.field-meta.xml
<CustomField>
    <fullName>CF_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicable</label>
    <type>Checkbox</type>
</CustomField>