force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Call_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Evaluation__c</fullName>
    <label>Call Evaluation</label>
    <referenceTo>CF_Call_Evaluation__c</referenceTo>
    <relationshipLabel>Evaluation Results</relationshipLabel>
    <relationshipName>Evaluation_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>