force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Criterion_Category__c.field-meta.xml
<CustomField>
    <fullName>CF_Criterion_Category__c</fullName>
    <description>Snapshot of the criterion category, such as Call Opening or Needs Assessment.</description>
    <label>Criterion Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>