force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Display_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CF_Display_Outcome__c</fullName>
    <description>Returns values like Passed, Failed, or N/A for reporting and screen display.</description>
    <formula>IF(
  NOT(CF_Applicable__c),
  &quot;N/A&quot;,
  IF(CF_Passed__c, &quot;Passed&quot;, &quot;Failed&quot;)
)</formula>
    <label>Display Outcome</label>
    <type>Text</type>
</CustomField>