force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CF_Evaluation_Criteria__c</fullName>
    <label>Evaluation Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>