force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CF_Feedback__c</fullName>
    <label>Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>