force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Passed__c.field-meta.xml
<CustomField>
    <fullName>CF_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>