force-app/main/default/objects/CF_Evaluation_Result__c/fields/CF_Possible_Points__c.field-meta.xml
<CustomField>
    <fullName>CF_Possible_Points__c</fullName>
    <description>Maximum points available for this criterion for this evaluation result. Should be 0 when not applicable.</description>
    <label>Possible Points</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>